<resources>
    <string name="app_name">Qaraqalpaq Sign Language</string>
    <string name="alphabet_gif">Álipbe (video)</string>
    <string name="alphabet_photo">Álipbe (súwret)</string>
    <string name="introducing">Tanısıw</string>
    <string name="human">Insan</string>
    <string name="digits">Sanlar</string>
    <string name="config">Konfiguraciya</string>
    <string name="family">Shańaraq</string>
    <string name="favourites">Saylanǵanlar</string>
    <string name="search">Ízlew</string>
    <string name="obzor">Túsindirmesi</string>
    <string name="add_to_fav">Saylandılarǵa qosıw</string>
    <string name="wrong_right">Dúrıs qáte</string>
    <string name="test_done">Test juwmaqlandı</string>
    <string name="result_in_percent">Sizdiń usı testdegi anıqlılıǵıńız %s</string>
    <string name="retry">Qayta urınıw</string>
    <string name="check">Tekseriw</string>
    <string name="your_result">Sizdıń nátiyjeńiz</string>
    <string name="procced">Dawam etiw</string>
    <string name="right">Dúrıs</string>
    <string name="wrong">Qáte</string>
    <string name="start_quiz">Victorinanı baslaw</string>
    <string name="aboutus">Bizler haqqımızda</string>

    <string name="about_us_text">\"Qaraqalpaq Sign Language\" qosımshasın jaratıwda járdem bergen
        bárshege shın júrekten minnetdarshılıǵımızdı bildiremiz. Bul joybardı kóplegen ájayıp
        insanlar hám shólkemlerdiń járdemi hám qatnasıwisiz ámelge asırıw múmkin emes edi.
        \n4 mektep-internat direktorı hám oqıtıwshıları:\nSiziń qatnasıwıńız hám qollap-quwatlawıńız bahasız edi. Qosımshanı jaqsılawǵa járdem bergen
        derekler hám máslahátlar ushın minnetdarshılıq bildiremiz. Siziń tálimge bolǵan sadıqlıǵıńız
        hám balalarǵa ǵamxorlıǵıńız bizdi keyingi jetiskenliklerge ilxamlandıradı.
        \nBiziń shańaraqlarımız hám doslarımız:\n
        Sabırlıǵıńız, túsiniwińiz hám turaqlı qollap-quwatlawıńız ushın minnetdarmız. Sizdń
        máslahátlarıńız hám bizge bolǵan isenimińiz barlıq qıyınshılıqlardı jeńiwge hám joybardı
        juwmaqlawǵa járdem berdi.
        \nSherikler hám qáwenderler:\n
        Biz sheriklerimiz hám qáwenderlerimizge finanslıq járdem hám usınıs etilgen resurslar ushın
        tereń minnetdarshılıq bildiremiz. Siziń járdeminizsiz bul joybardı ámelge asırıw múmkin emes
        edi.\n
        "Qaraqalpaq Sign Language" ni jaratılıwma úles qosqan hár bir adamǵa shın júrekten
        minnetdarshılıq bildiremiz. Birgelikte biz esitiw qábiletinde nuqsanı bar adamlardıń ómirin
        jaqsılaw hám qaraqalpaq ım-ishara -belgi tilin rawajlandırıw jolında zárúrli qádem tasladıq.
    </string>
    <string name="start">Baslaw</string>
</resources>